<resources>
    <string name="app_name">GardenHand</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gardener_login">GardenerLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_garden_manager">GardenManager</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_plant">Add Plant</string>
    <string name="title_activity_add_plant">AddPlantActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plants">Plants</string>
    <string name="plants_to_add">Plants to Add</string>
    <string name="search_plant">Search Plant</string>
    <string name="view_friends_list">View Friends List</string>
    <string name="your_garden">Your Garden</string>
    <string name="find_vendors">Find Vendors</string>
    <string name="account_settings">Account Settings</string>
    <string name="title_activity_friends_list">FriendsListActivity</string>
    <string name="addfriend">addFriend</string>
    <string name="title_activity_garden_view">GardenView</string>
    <string name="title_activity_search_view">SearchView</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_add_garden">addGarden</string>
    <string name="title_activity_plant_list_view">PlantListView</string>
    <string name="vendor_edittext">Enter item to search</string>
    <string name="vendor_button">Search</string>
    <!-- Notification Strings -->
    <string name="plant_channel">Plant Notifications</string>
    <string name="plant_channel_description">Reminders and updates about the plants in your garden</string>
    <string name="social_channel">Friend Notifications</string>
    <string name="social_channel_description"> Notifications about comments and friends</string>
    <string name="misc_channel">Other Notifications</string>
    <string name="misc_channel_description">Other miscellaneous notifications</string>
    <string name="search">Search</string>
    <string name="title_activity_garden_history">GardenHistory</string>
    <string name="title_activity_plant_wish_list">PlantWishList</string>
    <string name="title_activity_create_gardener_account">CreateGardenerAccount</string>
    <string name="title_activity_add_friend">AddFriend</string>
    <!-- End of Notification Strings -->
</resources>
