<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPlantActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />




    </android.support.design.widget.AppBarLayout>


    <androidx.core.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabMode = "fixed"
            >

            <android.support.design.widget.TabItem
                android:id="@+id/planttab1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/plants_to_add" />

            <android.support.design.widget.TabItem
                android:id="@+id/planttab2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/search_plant" />
        </android.support.design.widget.TabLayout>


    </androidx.core.view.ViewPager>

</android.support.design.widget.CoordinatorLayout>